[package]
name = "termimage"
description = "Display images in your terminal, kind of"
documentation = "https://cdn.rawgit.com/nabijaczleweli/termimage/doc/termimage/index.html"
repository = "https://github.com/nabijaczleweli/termimage"
readme = "README.md"
keywords = ["twitter", "tweets", "queue", "schedule", "content"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in mod/*.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
image = "0.10"
clap = "2.11"


[[bin]]
name = "termimage"
test = false
doc = false
