[package]
name = "termimage"
description = "Display images in your terminal, kind of"
documentation = "https://rawcdn.githack.com/nabijaczleweli/termimage/doc/termimage/index.html"
repository = "https://github.com/nabijaczleweli/termimage"
readme = "README.md"
keywords = ["image", "terminal", "picture", "display", "show"]
categories = ["command-line-utilities"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "1.2.0"
# Remember to also update in termimage.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>",
           "Josh Triplett <josh@joshtriplett.org>",
           "Aaron Hill <aa1ronham@gmail.com>",
           "Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
lazy_static = "1.4"
term_size = "0.3"
image = "0.24"
regex = "1.3"
clap = "2.33"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["winbase", "wincon"]


[[bin]]
name = "termimage"
test = false
doc = false
